; ModuleID = '/home/carl/AnghaBench/redis/src/extr_object.c_createZiplistObject.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_object.c_createZiplistObject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@OBJ_LIST = common dso_local global i32 0, align 4
@OBJ_ENCODING_ZIPLIST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @createZiplistObject() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = call i8* (...) @ziplistNew()
  store i8* %3, i8** %1, align 8
  %4 = load i32, i32* @OBJ_LIST, align 4
  %5 = load i8*, i8** %1, align 8
  %6 = call %struct.TYPE_4__* @createObject(i32 %4, i8* %5)
  store %struct.TYPE_4__* %6, %struct.TYPE_4__** %2, align 8
  %7 = load i32, i32* @OBJ_ENCODING_ZIPLIST, align 4
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  ret %struct.TYPE_4__* %10
}

declare dso_local i8* @ziplistNew(...) #1

declare dso_local %struct.TYPE_4__* @createObject(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
